--- a/contact.css
+++ b/contact.css
@@ -160,12 +160,12 @@ footer {
 }
 
 /* ===== Responsive ===== */
-@media(max-width:900px){
+@media(max-width:860px){
     .contact-row {
         flex-direction: column;
     }
     .contact-image, .contact-content {
-        width: 100%;
+        width: 100vw;
     }
 }
 
@@ -175,3 +175,4 @@ footer {
     .navbar nav.active{display:block;}
     .navbar nav ul{flex-direction:column;gap:0.8rem;}
 }
+
