--- a/contact.css
+++ b/contact.css
@@ -165,7 +165,7 @@ footer {
         flex-direction: column;
     }
     .contact-image, .contact-content {
-        width: 100vw;
+        width: 70%;
     }
 }
 
@@ -175,4 +175,5 @@ footer {
     .navbar nav.active{display:block;}
     .navbar nav ul{flex-direction:column;gap:0.8rem;}
 }
+
 
