--- a/contact.css
+++ b/contact.css
@@ -169,12 +169,16 @@ footer {
     }
 }
 
-@media(max-width:568px){
+@media(max-width:768px){
     .hamburger{display:flex;}
     .navbar nav{display:none;position:absolute;top:65px;left:0;width:200px;background:rgb(15,15,30);padding:1rem 0;text-align:center;}
     .navbar nav.active{display:block;}
     .navbar nav ul{flex-direction:column;gap:0.8rem;}
+    .contact-form{ display: flex;
+                  width:100%;
+        
 }
+
 
 
 
