--- a/contact.css
+++ b/contact.css
@@ -174,7 +174,10 @@ footer {
     .navbar nav{display:none;position:absolute;top:65px;left:0;width:200px;background:rgb(15,15,30);padding:1rem 0;text-align:center;}
     .navbar nav.active{display:block;}
     .navbar nav ul{flex-direction:column;gap:0.8rem;}
+      .contact-form button {
+        width: 100%;
 }
+
 
 
 
